--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "client_gateway"]
 	path = client_gateway
 	url = git@github.com:All-Stores/client_gateway.git
+[submodule "products_ms"]
+	path = products_ms
+	url = git@github.com:All-Stores/products_ms.git
