--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - "8222:8222"
       - "4222:4222"
       
-  client-gateway:
+  client_gateway:
     build: ./client_gateway
     ports:
       - ${CLIENT_GATEWAY_PORT}:3000
@@ -16,7 +16,7 @@ services:
       - PORT=3000
       - NATS_SERVERS=nats://nats-server:4222
 
-  product-ms:
+  product_ms:
     build: ./products_ms
     depends_on:
       - nats-server
@@ -39,7 +39,7 @@ services:
     volumes:
       - ./orders_ms/postgres_data:/var/lib/postgresql/data
 
-  order-ms:
+  order_ms:
     build: ./orders_ms
     depends_on:
       - order-postgres
