add submodule payments_ms

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "orders_ms"]
 	path = orders_ms
 	url = git@github.com:All-Stores/orders_ms.git
+[submodule "payments_ms"]
+	path = payments_ms
+	url = git@github.com:All-Stores/payments_ms.git
