--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,12 @@
 CLIENT_GATEWAY_PORT=3000
+
+# variables payments
+SECRET_STRIPE=https://dashboard.stripe.com/
+PUBLIC_STRIPE=https://dashboard.stripe.com/
+STRIPE_SUCCESS=http://localhost:3003/payment_stripe/success
+STRIPE_CANCEL=http://localhost:3003/payment_stripe/cancel
+STRIPE_ENDPOINT=commanline$stripelisten
+
+# variables auth
+AUTH_DATABASE_URL=mongodb+srv://<user>:<password>@cluster0.ofvlmgq.mongodb.net/<database>?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=clavesecreta
